Center align promoted collection images on home page [fixes #159474140]

--- a/app/assets/stylesheets/spree/frontend/_flex.sass
+++ b/app/assets/stylesheets/spree/frontend/_flex.sass
@@ -21,6 +21,10 @@
     &.column
       flex-direction: column
 
+    @media (max-width: $screen-xs-max)
+      &.column-xs
+        flex-direction: column
+
     &.wrap
       flex-wrap: wrap
 
