--- a/app/assets/stylesheets/spree/frontend/home.sass
+++ b/app/assets/stylesheets/spree/frontend/home.sass
@@ -140,10 +140,11 @@ body#home-page
       background-size: auto
       min-height: 530px
       padding: 0
+
       .content
         position: relative
         width: 255px
-        margin: 200px 0 20px 60px
+        margin-left: 60px
         text-align: left
         h3
           font-size: 30px
@@ -153,10 +154,9 @@ body#home-page
           margin-bottom: 20px
         .btn
           padding: 16px 50px
+
       figure
-        position: absolute
-        top: 80px
-        right: 20px
+        margin-right: 20px
         width: auto
         text-align: right
         img
@@ -164,23 +164,20 @@ body#home-page
 
     @media (max-width: $screen-md-max)
       .box
-        padding-top: 20px
         margin-bottom: 24px
+
         .content
           width: 100%
           margin: 0
           text-align: center
           h3
             font-size: 24px
+
         figure
-          position: relative
-          top: unset
-          right: unset
-          margin: 25px auto 0
+          margin: 25px 0 0
           text-align: center
-          width: 260px
+
           img
-            max-width: 100%
             max-height: 300px
 
   section.staff-picks
